<resources>
    <string name="app_name">AutoCrop2</string>
    <string name="action_logout">Log out</string>
    <string name="assetBrowserButton">View my creative cloud library</string>
    <string name="cropButton">Crop</string>

    <string name="image_data_label">Image data</string>
    <string name="image_name_label">Name:</string>
    <string name="image_name"/>
    <string name="image_catalog_label_text_view">In catalog:</string>
    <string name="ellipsis">...</string>
    <string name="image_size_label_text_view">Size:</string>
    <string name="creation_date_label_text_view">Created on:</string>
    <string name="image_modification_date_text_view">Edited on:</string>


</resources>
