<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

  <Button
      android:id="@+id/assetBrowserButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/assetBrowserButton"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/cropButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cropButton"
        android:layout_below="@+id/assetBrowserButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/image_data_label"
        android:id="@+id/imageDataLabelTextView"
        android:layout_below="@+id/cropButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/image_name_label"
        android:id="@+id/imageNameLabelTextView"
        android:layout_below="@+id/imageDataLabelTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/imageName"
        android:text="@string/ellipsis"
        android:layout_toRightOf="@+id/imageDataLabelTextView"
        android:layout_toEndOf="@+id/imageDataLabelTextView"
        android:layout_marginLeft="73dp"
        android:layout_marginStart="73dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/image_size_label_text_view"
        android:id="@+id/imageSizeLabelTextView"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageNameLabelTextView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/creation_date_label_text_view"
        android:id="@+id/creationDateLabelTextView"
        android:textStyle="bold"
        android:layout_below="@+id/imageSizeLabelTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/imageSizeTextView"
        android:text="@string/ellipsis"
        android:layout_above="@+id/creationDateLabelTextView"
        android:layout_alignLeft="@+id/imageName"
        android:layout_alignStart="@+id/imageName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/imageCreationDateTextView"
        android:text="@string/ellipsis"
        android:layout_below="@+id/imageSizeTextView"
        android:layout_alignLeft="@+id/imageSizeTextView"
        android:layout_alignStart="@+id/imageSizeTextView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/imageNameTextView"
        android:text="@string/ellipsis"
        android:layout_below="@+id/imageDataLabelTextView"
        android:layout_alignLeft="@+id/imageSizeTextView"
        android:layout_alignStart="@+id/imageSizeTextView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/image_modification_date_text_view"
        android:id="@+id/imageModificationDateLabelTextView"
        android:textStyle="bold"
        android:layout_below="@+id/creationDateLabelTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/imageModificationDateTextView"
        android:text="@string/ellipsis"
        android:layout_below="@+id/imageCreationDateTextView"
        android:layout_alignLeft="@+id/imageCreationDateTextView"
        android:layout_alignStart="@+id/imageCreationDateTextView"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activePhotoImageView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:layout_below="@+id/imageModificationDateLabelTextView"/>



</RelativeLayout>
